# kryptonyte

./: CMakeLists.txt  LICENSE  info.txt
include/: block.h  blockchain.h
src/: blockchain.cpp  init.cpp
src/block/: block.cpp
